--- a/config-repo/htwo.properties
+++ b/config-repo/htwo.properties
@@ -1,1 +1,4 @@
-
+server.port=8889
+spring.cloud.config.server.git.uri=https://github.com/vipul1999/springcloud
+spring.cloud.config.server.git.searchPaths=config
+spring.cloud.config.server.git.cloneOnStart=true
